<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.hackru.buswatcher.WatcherActivity$PlaceholderFragment">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bus_name"
        style="@style/text_style_heading"
        android:id="@+id/text_bus_code"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        style="@style/text_style_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:id="@+id/text_time"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        style="@style/text_style_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:id="@+id/text_date"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/text_time" />

    <TextView
        style="@style/text_style_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_of_week"
        android:id="@+id/text_day"
        android:layout_below="@+id/text_date"
        android:layout_alignStart="@+id/text_date" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_watcher"
        android:id="@+id/button_toggle_watcher"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/text_day"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        style="@style/text_style_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_left"
        android:id="@+id/text_stop_left"
        android:layout_below="@+id/text_bus_code"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
